[gd_scene load_steps=9 format=2]

[ext_resource path="res://table/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://table/pot/PotHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Table/Table.gd" type="Script" id=3]
[ext_resource path="res://asset/table.png" type="Texture" id=4]
[ext_resource path="res://table/community_cards/CommunityCards.tscn" type="PackedScene" id=5]
[ext_resource path="res://Table/Seat/Seat.tscn" type="PackedScene" id=6]
[ext_resource path="res://table/Bet.tscn" type="PackedScene" id=7]
[ext_resource path="res://table/pot/Pot.gd" type="Script" id=8]

[node name="Table" type="Node2D" groups=[
"Table",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="CommunityCards" parent="." instance=ExtResource( 5 )]

[node name="Seats" type="Node2D" parent="."]

[node name="Seat" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 960, 850 )

[node name="Seat2" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 460, 840 )
sn = 2

[node name="Seat3" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 240, 610 )
sn = 3

[node name="Seat4" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 240, 370 )
sn = 4

[node name="Seat5" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 560, 160 )
sn = 5

[node name="Seat6" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 1260, 160 )
sn = 6

[node name="Seat7" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 1660, 370 )
sn = 7

[node name="Seat8" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 1660, 610.997 )
sn = 8

[node name="Seat9" parent="Seats" instance=ExtResource( 6 )]
position = Vector2( 1460, 840 )
sn = 9

[node name="BetOfSeats" type="Node2D" parent="."]

[node name="Bet" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false

[node name="Bet2" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 600, 690 )

[node name="Bet3" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 500, 550 )

[node name="Bet4" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 500, 330 )

[node name="Bet5" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 700, 260 )

[node name="Bet6" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 1100, 260 )

[node name="Bet7" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 1400, 330 )

[node name="Bet8" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 1400, 550 )

[node name="Bet9" parent="BetOfSeats" instance=ExtResource( 7 )]
visible = false
position = Vector2( 1300, 690 )

[node name="GUI" parent="." groups=[
"gui",
] instance=ExtResource( 1 )]

[node name="BettingTimer" type="Timer" parent="."]

[node name="Pot" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="TotalPot" parent="Pot" instance=ExtResource( 2 )]
margin_left = 760.0
margin_top = 370.0
margin_right = 1160.0
margin_bottom = 410.0
title_text = "TotalPot: "

[node name="CurrentPot" parent="Pot" instance=ExtResource( 2 )]
margin_left = 760.0
margin_top = 600.0
margin_right = 1160.0
margin_bottom = 640.0
title_text = "Pot: "
